# pyfurc

./: .bumpversion.cfg  .coverage  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  install_auto.py  pyproject.toml  setup.cfg  setup.py
.VSCodeCounter/2021-06-10_16-43-10/: details.md  results.csv  results.md  results.txt
.github/workflows/: tests.yml
doc/: Makefile
doc/source/: conf.py  index.rst  license.rst
doc/source/_static/: pyfurcbib.bib
doc/source/_templates/: globaltoc.html
doc/source/api/: mod_api_doc.py  pyfurc.rst
doc/source/develop/: dev_basics.rst
doc/source/usage/: index.rst  install_auto.rst  installation.rst  installation_auto.rst  installation_ubuntu.rst  installation_wsl.rst  tutorial.rst
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_sources/api/: apidoc.rst.txt  modules.rst.txt
docs/_sources/usage/: installation_auto.rst.txt  installation_wsl.rst.txt  wsl.rst.txt
docs/api/: apidoc.html  modules.html  pyfurc.html
docs/develop/: dev_basics.html
docs/usage/: index.html  install_auto.html  installation.html  installation_auto.html  installation_ubuntu.html  installation_wsl.html  quickstart.html  wsl.html
pyfurc/: __init__.py  __main__.py  core.py  tools.py  util.py
scripts/: build-auto-07p.sh
src/pyfurc/: __init__.py  __main__.py  core.py  tools.py  util.py
test/: conftest.py  test_auto.py  test_examples.py
tools/: install_auto.py  pyfurc_conf.py  write_conf.py
