[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA -q"
testpaths = [
    "test",
]

[tool.cibuildwheel]
archs = ["native"]
build= ["cp38-*_x86_64"]

build-frontend = "build"

test-command = "pytest {package}/tests"
before-test = ""
test-requires = ["pytest"]
test-extras = []

manylinux-x86_64-image = "manylinux2014"
