[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA -q --ignore=ext/"
testpaths = [
    "test",
]

[tool.cibuildwheel]
archs = ["native"]
build= ["cp38-manylinux_x86_64"]
build-verbosity = 1
build-frontend = "build"
test-command = "pytest {project}/test"
before-test = ""
test-requires = ["pytest"]
test-extras = "test"

manylinux-x86_64-image = "manylinux2014"