[metadata]
name = pyfurc
version = 0.1.7
description = "AUTO-07p made accessible through python."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/klunkean/pyfurc
author = klunkean
author_email = klunkean@posteo.de
license = WTFPL
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = "https://pyfurc.readthedocs.io/"

[options]
packages = find:
install_requires =
    appdirs
    numpy
    pandas
    sympy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    executable-name = pyfurc.__main__:main

[options.extras_require]
dev =
    black
    bump2version
    pre-commit
    pytest
docs =
    pydata-sphinx-theme
    sphinx

[options.package_data]
pyfurc = auto-07p/*
