[metadata]
name = pyfurc
version = 0.2.0
description = "AUTO-07p made accessible through python."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/klunkean/pyfurc
author = klunkean
author_email = klunkean@posteo.de
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = "https://pyfurc.readthedocs.io/"

[options]
packages = find:
install_requires =
    numpy
    pandas
    sympy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    bump2version
    pre-commit
    pytest
docs =
    jupyter-sphinx
    pydata-sphinx-theme
    sphinx
    sphinx_lesson
    sphinxcontrib-bibtex
test =
    pytest
